feat(gemini): add Gemini environmental impact tracker
Adds a script that interacts with the Gemini model via the Ecologits library and tracks the environmental impact of prompts and responses.

- Introduces a `config.json` file to store the API key and model name, which are loaded at runtime.
- Implements functionality to save the environmental impact data to a CSV file for analysis.
- Includes error handling for missing or invalid configuration files.
- Adds a README with instructions on how to use the tool.
- Updates .gitignore to ignore sensitive data and generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,17 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+
+pip
+install
+ecologits[google-generativeai]
+
+bin/
+lib/
+lib64/
+pip/
+install/
+ecologits[google-generativeai]/
+
+gemini_environmental_impact.csv
